<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/spacing_20"
    android:id="@+id/frag_profile_view_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_40"
        >
    <LinearLayout
        android:id="@+id/frag_profile_view_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="@dimen/spacing_40"
        >
        <TextView
            android:id="@+id/frag_profile_tv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_top_profile"
            style="@style/CVTextViewWhiteLargeBold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/frag_profile_tv_logout"
            android:layout_width="@dimen/spacing_200"
            android:layout_height="@dimen/spacing_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_40"
            android:text="@string/string_logout"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/bg_white_solid_no_border_30_radius"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/frag_profile_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_username"
                style="@style/CVTextViewWhite"

                />
            <EditText
                android:id="@+id/frag_profile_ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CVEditTextBack"
                android:hint="@string/string_enter_username"
                android:background="@android:color/white"
                android:maxLength="30"
               />
            <TextView
                android:id="@+id/frag_profile_tv_error_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error"
                style="@style/CVTextViewWhiteError"
                />
        </LinearLayout>
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_email"
                style="@style/CVTextViewWhite"

                />
            <EditText
                android:id="@+id/frag_profile_ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CVEditTextBack"
                android:hint="@string/string_enter_email"
                android:background="@android:color/white"
                android:maxLength="30"
                />
            <TextView
                android:id="@+id/frag_profile_tv_error_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error"
                style="@style/CVTextViewWhiteError"
                />
        </LinearLayout>
        <!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_password"
                style="@style/CVTextViewWhite"

                />
            <EditText
                android:id="@+id/frag_profile_ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CVEditTextBack"
                android:hint="@string/string_enter_password"
                android:background="@android:color/white"
                android:maxLength="30"
                android:inputType="textPassword"
                />
            <TextView
                android:id="@+id/frag_profile_tv_error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error"
                style="@style/CVTextViewWhiteError"
                />
        </LinearLayout>
        <!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_confirm_password"
                style="@style/CVTextViewWhite"

                />
            <EditText
                android:id="@+id/frag_profile_ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CVEditTextBack"
                android:hint="@string/string_enter_password"
                android:background="@android:color/white"
                android:maxLength="30"
                android:inputType="textPassword"
                />
            <TextView
                android:id="@+id/frag_profile_tv_error_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error"
                style="@style/CVTextViewWhiteError"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/frag_profile_tv_register"
            android:layout_width="@dimen/spacing_200"
            android:layout_height="@dimen/spacing_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_40"
            android:text="@string/string_register"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/bg_white_solid_no_border_30_radius"
            />
    </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
